--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
 
 					<h4 class="txt-h4">California population, 1900&ndash;2000</h4>
 
+					<p>A cartogram series by <a href="http://www.jakecoolidgecartography.com">Jake Coolidge</a></p>
+
 					<hr />
 
 					<div id="discussion-text"></div>
