tweaks to attribution and heading typography

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 
 					<h1 class="txt-h1" style="line-height: 1em;">A Century of Growth</h1>
 
-					<h4 class="txt-h4">California population, 1900&ndash;2000</h4>
+					<h4 class="txt-h4">California population, <br />1900&ndash;2000</h4>
 
-					<p>A cartogram series by <a href="http://www.jakecoolidgecartography.com">Jake Coolidge</a></p>
+					<p style="line-height: 1.2em;">A cartogram series by <br /><a href="http://www.jakecoolidgecartography.com">Jake Coolidge</a></p>
 
 					<hr />
 
